finish_sample_delivery_api